--- a/version3.tex
+++ b/version3.tex
@@ -417,7 +417,14 @@ where $c$ is the convection coefficient defined in~\eqref{convect}, $\Delta x$ i
 \begin{lineq}
 Pe =  \frac{\frac{1}{r}K(h) \Delta x}{2K(h)} = \frac{\Delta x}{2r}.
 \end{lineq}
-Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of the well known spurious oscillations~\cite{zienkiewicz1976, roos-layers}, a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore detached by 2~cm from the axis of anisotropy, and thus the Peclet number was 0.5 only. \mich{This simplification must be again validated. However, compared to the oversized ring thickness, it is impossible to numerical model domains, where $r_{min}=0$. And so three different setups, where the domain was detached for $r_{min}=$0.2,~1.0, and 2.0~cm from the center of anisotropy. In order to maintain the Peclet number on equal level, the mesh density $\Delat x$ at the left hand side boundary should be equal to $r_{min}$. It is apparent, that compared to the previous case, where we were evaluating the oversized ring thickness, changing the location of the left hand side boundary will significantly affect the mesh size.
+Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of the well
+  known spurious oscillations~\cite{zienkiewicz1976, roos-layers}, 
+a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at 
+the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore 
+detached by 2~cm from the axis of anisotropy, and thus the Peclet number was 0.5 only. \mich{This simplification must be again validated. However, compared 
+to the oversized ring thickness, it is impossible to numerical model domains, where $r_{min}=0$. And so three different setups, where the domain was 
+detached for $r_{min}=$0.2,~1.0, and 2.0~cm from the center of anisotropy. In order to maintain the Peclet number on equal level, the mesh density
+ $\Delta x$ at the left hand side boundary should be equal to $r_{min}$. It is apparent, that compared to the previous case, where we were evaluating the oversized ring thickness, changing the location of the left hand side boundary will significantly affect the mesh size.}
 
 
 
@@ -757,7 +764,7 @@ Results of the synthetic problem are given in table~\ref{tab-benchres}. For thes
 {\bf 4}                  & \num{0.157e-2}                         & 1.968                     & 0.720                            & \num{2.07}                              & \num{1.053e-5}                       & \num{0.229022}    & \cellcolor[HTML]{C0C0C0}                                                                         \\ \cline{1-7}
 \rowcolor[HTML]{C0C0C0} 
 {\bf 5}                  & \num{0.150e-2}                         & 1.586                     & 0.720                            & \num{1.093}                             & \num{7.641e-5}                       & \num{9.93226}     & \multirow{-5}{*}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}not\\ computed\end{tabular}} \\ \hline
-\rowcolor{white}{\bf 6}  & \num{0.258e-2}                         & 2.152                     & 0.401                            & \num{1.095}                             & 0                                    & \num{0.01992916}  & \num{0.01362932}                                                                                 \\ \hline
+\rowcolor{white}{\bf 6}  & \num{0.002774734}                         & \num{2.138412}                & 0.362                            & \num{1.059653}                             & 0                                    & \num{0.01992916}  & \num{0.01362932}                                                                                 \\ \hline
 \rowcolor{white}{\bf 7}  & \num{0.3802e-2}                        & 1.279                     & 0.594                            & \num{1.165}                             & 0                                    & \num{0.009694036} & \num{0.08630053}                                                                                 \\ \hline
 \rowcolor{white} {\bf 8} & \num{0.255e-2}                         & 1.384                     & 0.254                            & \num{1.119}                             & \num{1.922e-4}                       & \num{0.01030408}  & \num{0.04151718}                                                                                 \\ \hline
 \end{tabular}
@@ -874,7 +881,7 @@ The location of peaks of the response plots for these two sequential discretizat
 \hline
                          &                                        &                           &                                  &                                         &                                      & \multicolumn{2}{c|}{RMSE error \eqref{objektiva1} [cm]}                                                 \\ \cline{7-8} 
 \multirow{-2}{*}{no.}    & \multirow{-2}{*}{$\alpha$ [cm$^{-1}$]} & \multirow{-2}{*}{$n$ [-]} & \multirow{-2}{*}{$\theta_s$ [-]} & \multirow{-2}{*}{$K_s$ [cm.hrs$^{-1}$]} & \multirow{-2}{*}{$S_s$  [cm$^{-1}$]} & $r_f$ = 1                                           & $r_f$=2                                           \\ \hline
-\rowcolor{white}{\bf 6}  & \num{0.258e-2}                         & \num{1.950}               & 0.401                            & \num{1.095}                             & 0                                    & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}computed and\\ confirmed at previous level\end{tabular}} \\ \hline
+\rowcolor{white}{\bf 6}  & \num{0.002774734}                         & \num{2.138412}               & 0.362                        & \num{1.059653}                             & 0                                    & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}computed and\\ confirmed at previous level\end{tabular}} \\ \hline
 \rowcolor[HTML]{FFFE65} 
 {\bf 7}                  & \num{0.0032285}                        & \num{1.4421}              & 0.513                            & \num{1.0195}                            & 0                                    & \num{0.05210686}                                   & \num{0.01217005}                                  \\ \hline
 \rowcolor{white} {\bf 8} & \num{0.002276}                         & \num{1.5189}              & 0.236                            & \num{1.0356}                            & \num{0}                              & \num{0.02809722}                                    & \num{0.0306573}                                   \\ \hline
